# black-list-users-app

./: .env  main.py  pyproject.toml
migration/: env.py
migration/versions/: 4c741c7c98a3_initial_revision.py
src/: config.py
src/app/: app.py
src/app/aiobot/: bot.py
src/app/web/: app.py  templates.py
src/app/web/routers/: form.py  wh.py
src/app/web/static/tamplates/: form.html  thanks.html
src/database/: base.py  models.py
src/database/data/: black-list.db
